Fixed Spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .list-group-item{
-	margin-bottom: 50px;
+	margin-bottom: 100px;
 	margin-left: 30px;
 	margin-right: 30px;
 }
@@ -64,7 +64,9 @@ html, body {
 
 
 .signUpForm{
-
+	font-family: 'Archivo Narrow', sans-serif;
+	font-size: 20px;
+	color: #fff;
 	clear: top;
 	margin-top: 10cm;
 	text-align: center;
